SERVER-61548 Handle dotted partitionByFields in $densify